test/extern/ExternBlockClangError.good
ExternBlockClangError.chpl:1: error: error running clang on extern block
ExternBlockClangError.chpl:1: note: clang reported the following errors for this extern block
ExternBlockClangError.chpl:3: note: no previous prototype for function 'bar'
